# taskly-dotnet-todo-cli

./: .gitignore  CLAUDE.md  TodoApp.sln
python/: README.md  pyproject.toml
python/tests/: test_todo.py
python/todoapp/: __init__.py  __main__.py  cli.py  item.py  service.py  store.py
src/TodoApp.Cli/: Program.cs  TodoApp.Cli.csproj
src/TodoApp.Core/: ITodoStore.cs  JsonTodoStore.cs  TodoItem.cs  TodoService.cs
tests/TodoApp.Tests/: JsonTodoStoreTests.cs  TodoApp.Tests.csproj  TodoServiceTests.cs
